# burgeramt-appointments-websockets

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
appointments/: appointments.py
tests/: test_cli.py
